--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
     "sass": "^1.62.1"
   }
 }
